--- a/src/App.css
+++ b/src/App.css
@@ -4,56 +4,72 @@ body{
   margin-left: 50px;
   /* margin-right: -10px; */
 }
+* {
+	
+	box-sizing: border-box;
+	font-family: "Titillium Web", sans-serif;
+}
+
+:root {
+	--mainColor: #010407;
+	--mainColorLight: #010407;
+	--secondaryColor: #db2b39;
+	--textColor: #eee;
+}
 
 /* Header.css */
-/* CSS for the header component */
-
-/* Styles for header and navigation */
 header {
+  top: 0%;
   position: fixed;
- width: 100%; /* Changed width to 100% */
- top: 0;
- left: 0;
- z-index: 1000; /* Reduced z-index */
- background-color: #010509; /* Added background color */
- height: 14%;
+	display: flex;
+	align-items: center;
+  width: 100%;
+	justify-content: space-between;
+	height: 17%;
+	padding: 0 2rem;
+	background-color: var(--mainColor);
+	color: var(--textColor);
+  
 }
 
-header h1{
-font-size: 70px;
-font-Family: 'Pacifico-Regular';
-margin-bottom: 60px;
-margin-left: 120px; /*GENERAL MARGIN USED */
-/* font-weight: bolder; */
-color: aliceblue;
-margin-top: 2%;
+header h3{
+  font-size: 70px;
 }
 
-/* Style for the navigation */
-.nav-links {
- list-style-type: none;
- padding-bottom: 10px;
- /* text-align: center; */
- font-size: 25px; 
-  margin-top: -8%; 
- /* font-weight: bolder; */
- margin-left: 60%; 
- 
- }
- .nav-links li {
- display: inline;
- /* margin-right: 15px; */
- margin-left: 50px; 
- padding-bottom: 140pc;
- }
- .nav-links li a {
- color: white;
- text-decoration: none;
- }
- .nav-links li a:hover {
- color: #ffd700; /* Change color on hover */
- }
+nav a {
+	/* margin: 0 1rem; */
+	color: var(--textColor);
+	text-decoration: none;
+  margin-left: 70%;
+  font-size:22px;
+ text-align:end;
+  margin-right: -60%;
+  justify-content: space-between;
+  
+}
 
+nav a:hover {
+	color: var(--secondaryColor);
+}
+
+header .nav-btn {
+	padding: 5px;
+	cursor: pointer;
+	background: transparent;
+	border: none;
+  margin: 2px;
+	outline: none;
+	color: var(--textColor);
+	visibility: hidden;
+	opacity: 0;
+	font-size: 3.0rem;
+}
+
+header div,
+nav {
+	display: flex;
+	align-items: center;
+}
 
 /* ABOUT.css */
 .about {
@@ -61,55 +77,51 @@ margin-top: 2%;
   margin-top: 33px;
   margin-left: 20%;
 }
+.about-about{
+  margin-left: -5%;
+  margin-right: 10%;
+  display: grid;
+  
+}
 .about h1{
-  margin-left: 60px;
+  margin-left: 0px;
+  margin-right: 20%;
   margin-top: 18%;
-  font-weight: bold;
-  font-size: 44px; 
-  color: aliceblue;
+  color: #eee;
   font-size: 73px;
   font-Family: 'Pacifico-Regular';
-}
-.fd{
-  margin-left: 110px;
-  margin-top: -6%;
-  font-weight: bold;
-  color: aliceblue;
-  font-size: 68px;
-  font-Family: 'Pacifico-Regular';
+  text-align: center;
+   
 }
 .about p{
-  margin-left: 150px;
-  margin-top: -0.2%;
+  margin-left: 10%;
+  margin-top: -4%;
+  margin-right: 45%;
   font-size: 20px; 
-  color: aliceblue;
+  color: #eee;
   font-Family: 'Pacifico-Regular';
+  text-align: center;
 }
-.pd{
-  margin-left: 185px;
-  font-size: 18px; 
-  color: aliceblue;
-  margin-top: -2%;
-  font-Family: 'Pacifico-Regular';
-}
+
 
 .do{
   color: aliceblue;
+  font-Family: 'Pacifico-Regular';
+  margin-left: -15%;
 }
 .do h2{
-  margin-left: -15%;
   margin-top: 15%;
   font-weight: bold;
   font-size: 55px; 
-  color: aliceblue;
   font-Family: 'Pacifico-Regular';
 }
 .do p{
-  margin-left: -15%;
-  font-size: 20px; 
-  color: aliceblue;
-  font-Family: 'Pacifico-Regular';
-  margin-right: 75%;
+  font-size: 18px; 
+  margin-right:62%;
+  margin-left: -0%;
+  margin-top: -1%;
+  text-align: left;
+
 }
 
 /* CSS FOR SKILLS */
@@ -126,45 +138,46 @@ margin-top: 2%;
   text-align: center;
   width: 100%;
   margin-top: 150px;
-  color: aliceblue;
+  color: rgb(238, 241, 243);
   font-Family: 'Pacifico-Regular';
-  margin-left: -6%;
+  /* margin-left: 8%; */
   
 }
 
 .category {
   margin: 10px;
+  font-weight:lighter;
   padding-top: 30px;
   padding-left: 35px;
   padding-right: 40px;
-  background-color: #141d26;
+  background-color: #25292e;
   border-radius: 20px;
-  width: 340px; /* Adjust width as needed */
-  height: 380px; /* Adjust height as needed */
-  justify-content: space-around;
+  width: 370px; /* Adjust width as needed */
+  height: 420px; /* Adjust height as needed */
   margin-top: 20px;
-  color: aliceblue;
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: rgb(219, 221, 223);
   font-size: 17px;
-  font-weight:lighter;
   margin-left: 120px;
   margin-right: -60px;
 }
 
+.category-name{
+  font-family: 'Pacifico-Regular';
+  font-size: 28px;
+}
+
 .category:hover{
-  background-color: rgb(49, 19, 2);
+  background-color: rgb(51, 20, 3);
 }
 
 .icon {
-  border-radius:75%;
+  border-radius:50%;
   margin-top: 14px;
   padding: 9PX;
-  width: 80px;
-  height:57px;
+  width: 54px;
+  height:40px;
   background-color: orangered;
 }
-
-
 
 .skills-item {
  
@@ -181,9 +194,7 @@ margin-top: 2%;
   color: black;
 }
 
-/* CSS FOR CONTACT *?
-
-/* Contact.css */
+/* CSS FOR CONTACT */
 .contact-container {
   display: flex;
   flex-direction:row;
@@ -195,20 +206,7 @@ margin-top: 2%;
 }
 
 .contact-link {
-  
-  /* margin-top: 100px;
-  display: flex;
-  margin: 0 10px;
-  
-  text-decoration: none;
-  color:orangered;
-  font-size: 20px;
-  border-radius: 50% solid;
-  margin-bottom: 20px; 
-  width: 50px;
-  height: 10px;
-   */margin-top: 119px;
-   
+   margin-top: 119px;
    display: inline-block;
    width: 30px; /* Adjust the width and height as needed */
    height: 60px; /* Adjust the width and height as needed */
@@ -218,7 +216,6 @@ margin-top: 2%;
    margin: 10px; /* Adjust spacing between icons */
    color:orangered;
    margin-bottom: 30px;
- 
 }
 
 .contact-link:hover {
@@ -226,7 +223,6 @@ margin-top: 2%;
 } 
 .app-container {
   position: relative;
-  /* Other styles for your app container */
 }
 
 /* App.css */
@@ -247,14 +243,6 @@ margin-top: 2%;
   transform: scaleY(0.5);
   background-color: rgb(255, 253, 253); /* Color of the line */
 }
-
-
-/* HOME.css */
-/* .bottom{
-  margin-top: -120px;
-  background-color: palegoldenrod;
-  font-size: 10000px;
-} */
 
 .project{
   margin-top: 200px;
@@ -293,13 +281,11 @@ margin-top: 2%;
 
 .project-name {
   font-size: 1.5em;
-  /* margin-bottom: -26px; */
   margin-right: 388px;
   font-weight:normal;
 }
 
 button {
-  /* padding: 8px 16px; */
   background-color: #010407;
   width: 150px;
   height: 50px;
@@ -312,39 +298,130 @@ button {
   margin-top: auto;
 }
 
+/*working*/
+@media screen and (max-width: 414px) {
+  .about {
+    margin-left: 10%;
+  }
 
-/* Example of using media queries */
-@media screen and (max-width: 768px) {
-  /* Styles for smaller screens (e.g., mobile) */
+  .about h1 {
+    margin-left: 10px;
+    font-size: 24px;
+  }
+
+  .fd {
+    margin-left: 10px;
+    font-size: 20px;
+  }
+
+  .about p {
+    margin-left: 10px;
+    font-size: 12px;
+  }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {
-  /* Styles for medium-sized screens (e.g., tablets) */ header {
-    /* Adjust header styles for smaller screens */
-    /* Example: reduce font size, margins, or change layout */
-    height: 12em; /* Sample adjustment */
-    /* Add other adjustments as needed */
-  }
+@media only screen and (max-width: 1024px) {
+	header .nav-btn {
+		visibility: visible;
+		opacity: 1;
+	}
 
-  header h1 {
-    /* Adjust header h1 styles */
-    font-size: 3.5em; /* Sample adjustment */
-    margin-left: 1em; /* Sample adjustment */
-    /* Add other adjustments as needed */
-  }
+	header nav {
+		position: fixed;
+		top: -100vh;
+		left: 0;
+		height: 100%;
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		gap: 1.5rem;
+		background-color: var(--mainColor);
+		transition: 1s;
+    flex-wrap: nowrap;
+	}
 
-  .nav-links li {
-    /* Adjust navigation links for smaller screens */
-    margin-left: 1em; /* Sample adjustment */
-    padding-top: -1em; /* Sample adjustment */
-    /* padding-bottom: 1em; Sample adjustment */
-    /* Add other adjustments as needed */
-    font-size: 0.6em; /* Sample adjustment */
+	header .responsive_nav {
+		transform: translateY(100vh);
+	}
+
+	nav .nav-close-btn { 
+		position: absolute;
+		top: 2rem;
+		right: 2rem;
+	}
+
+	nav a {
+		font-size: 1.0rem;
+    flex-wrap: nowrap;
+    margin-left: 40%;
+	}
+  
+
+  .about h1 {
+    margin-top: 20%;
+    margin-left: -20%;
+    margin-right: 0%;
+    font-size: 64px; 
+    display: flex;
+    flex-wrap: wrap;
+    color: #eee;
+    text-align: center;
     
   }
+  /* .you{
+    margin-left: 05%;
+    display:flex;
+    font-size: 64px;
+    margin-top: -2%;
+    margin-left: -20%;
+    margin-right: 0%;
+  } */
   
-}
-
-@media screen and (min-width: 1025px) {
-  /* Styles for larger screens (e.g., desktops) */
-}
+  .about p {
+    margin-left: 34px;
+    font-size: 19px;
+    margin-top: -8%;
+    margin-left: -30%;
+    margin-right: 0%;
+    text-align: center;
+  }
+  .do{
+    margin-top: 15%;
+    margin-left: 5%;
+  }
+  .do h2 {
+    margin-top: 10px;
+    font-size: 49px;
+    margin-left: 10%;
+    margin-right: 0%;
+  }
+  .do p {
+    margin-left: -12%;
+    font-size: 19px;
+    margin-right: 22%;
+    margin-top: -4%; 
+    text-align: center;
+  }
+  /*SKILLS*/
+  .skil{
+    margin-left: -2%;
+    font-size: 49px;
+    
+  }
+  .sc{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
+    width: 540px;
+    flex-wrap: wrap-reverse;
+  }
+  } 
+  
+   
+  
+    
+  
+  
