--- a/src/App.css
+++ b/src/App.css
@@ -333,7 +333,7 @@ nav {
   border: 1px solid rgb(168, 68, 10);
   padding: 20px;
   text-align: center;
-  max-width: 250px; /* Adjust card width as needed */
+  width: 250px;  
   height: 320px;
   border-radius: 3%;
   margin-top: 80px;
@@ -373,6 +373,11 @@ button {
   margin-top: auto;
 }
 
+/*PROJECT*/
+.project-card{
+  /* color: #000000; */
+
+}
 /*FOOTER*/
 
 /*working*/
@@ -615,61 +620,77 @@ header{
 }
 
 @media only screen and (max-width: 600px){
+  
+  .background-image-container {
+    margin-top: 41%;
+    margin-left: 10%;
+    border-radius: 50%;
+    width: 220px;
+    height: 220px;
+    background-image: url('./images/pics.jpeg');
+    background-size: cover; /* Adjust as needed */
+  }
+
     .about h1 {
-      margin-left: -25%;
+      margin-left: -15%;
       margin-right:1%;
-      margin-top: 35%;
-      font-size: 60px; 
-      color: #db2b39;
+      margin-top: 10%;
+      font-size: 34px; 
+      color: white;
     }
     
     .about p {
-      margin-top: -11%;
-      margin-left: -20%;
-      margin-right: 0%;
+      margin-top: -5%;
+      margin-left: -18%;
+      margin-right: 6%;
+      margin-bottom: 12%;
+      font-size: 20px;
     }
     .do{
-      margin-top: 15%;
+      margin-top: 17%;
       margin-left: 3%;
     }
     .do h2 {
-      margin-top:32%;
-      margin-left: 6%;
+      margin-top:29%;
+      margin-left: 16%;
       margin-right: 0%;
-      font-size: 300%;
+      font-size: 34px;
     }
     .do p {
-      margin-left: -20%;
+      margin-left: -23%;
       font-size: 18px;
-      margin-right:5%;
+      margin-right:3%;
       margin-top: -6%; 
-      text-align: center;
+      /* text-align: center; */
     }
     .do-do{
       margin-top: 22%;
     }
     .do-do h3{
-      margin-left: 1%;;
+      margin-left: 5%;;
       margin-right: 26%;
-      margin-top: -10%;
+      margin-top: -12%;
       font-weight: bolder;
-      font-size: 57px;
+      font-size: 50px;
+      color: white;
     }
     .do-do span{
-      font-size: 15px;
+      font-size: 18px;
       font-weight: lighter;
     }
     .about-btn1{
-      width: 45%;
-      margin-left: -10%;
+      width: 40%;
+      height: 55px;
+      margin-left: -2%;
     }
     .about-btn{
-      width: 45%;
+      width: 40%;
+      height: 55px;
     }
     /*SKILLS*/
     .skil{
-      margin-left: -2%;
-      font-size: 53px;
+      margin-left: -1%;
+      font-size: 38px;
       color:white;
     }
     .sc{
@@ -678,7 +699,31 @@ header{
       margin-top: -8%;
     }
     .category{
-      width: 340px;
-      height: 380px;
+      width: 300px;
+      height: 340px;
+      margin-left: 47%;
+    }
+    .icon{
+      margin-top: -6%;
+    }
+    .category p{
+      margin-top: -2%;
+    }
+    .projecth1{
+      margin-left: -3%;
+      font-size: 40px;
+      color:white;
+    }
+    .project-card{
+      flex-direction: column;
+      width: 420px;
+      height: 340px;
+      margin-top: 9%;
+      margin-left: -12%;
+      margin-right: 0%;
+      font-size: 15px;
+    }
+    .project-btn{
+      margin-left: 23%;
     }
   }
