--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body{
 }
 
 :root {
-	--mainColor: #010407;
+	--mainColor: #00040f;
 	--mainColorLight: #010407;
 	--secondaryColor: #db2b39;
 	--textColor: #ffffff;
@@ -30,10 +30,11 @@ header {
 	padding: 0 2rem;
 	background-color: var(--mainColor);
 	color: var(--textColor);
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
 header h3{
-  font-size: 70px;
+  font-size: 65px;
   font-Family: 'Pacifico-Regular';
 }
 nav a {
@@ -619,7 +620,9 @@ header{
 }
 
 @media only screen and (max-width: 600px){
-  
+  /* .header{
+    background-color: #491605;
+  } */
   .background-image-container {
     margin-top: 41%;
     margin-left: 10%;
@@ -629,7 +632,9 @@ header{
     background-image: url('./images/pics.jpeg');
     background-size: cover; /* Adjust as needed */
   }
-
+header h3{
+  font-size: 56px;
+}
     .about h1 {
       margin-left: -15%;
       margin-right:1%;
@@ -706,11 +711,15 @@ header{
       flex-direction: column;
       width: 60%;
       margin-top: -8%;
+      box-shadow: none;
+      border-radius: 21px;
+      color: #00040f;
     }
     .category{
       width: 300px;
       height: 340px;
       margin-left: 47%;
+      
     }
     .icon{
       margin-top: -6%;
