--- a/src/App.css
+++ b/src/App.css
@@ -731,21 +731,36 @@ header h3{
     }
     .project-card{
       flex-direction: column;
-      width: 450px;
-      height: 340px;
+      width: 435px;
+      height: 301px;
       margin-top: 9%;
       margin-left: -12%;
       margin-right: 0%;
       font-size: 15px;
+      border-radius: 10px;
     }
     .project-btn{
-      bottom: unset;
-      width: fit-content;
+      width:400px;
       height: 47px;
+      text-decoration: none;
+      color: white;
+      /* margin-left: 260px; */
+
     }
     .project-name{
       margin-top: 10%;
-      display: flex;
+      display:flex;
       font-family: sans-serif;
+      line-height: 17px;
+      font-size: 18px;
+      width: 100%;
+      height: 180px;
+      background-color: #dadada;
+    }
+    .project-btn:hover{
+      background-color: #452017;
+      border-radius: 30px 0px;
+      width: 200px;
+      height: 46px;
     }
   }
